--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,9 +28,14 @@ jobs:
 
          python-version: '3.11'
  
-    - name: Install Databricks CLI
-
-       run: pip install databricks
+    - name: Install Databricks CLI (curl)
+        run: |
+          set -euxo pipefail
+          # Install latest from 'main'. To pin, replace 'main' with a tag like 'v0.265.0'.
+          curl -fsSL https://raw.githubusercontent.com/databricks/setup-cli/main/install.sh | sh
+          # Ensure PATH includes the CLI install location (usually ~/.local/bin)
+          echo "$HOME/.local/bin" >> "$GITHUB_PATH"
+          databricks -v
  
     - name: Configure Databricks CLI
 
@@ -44,4 +49,4 @@ jobs:
 
        run: |
 
-         databricks repos update ${{ secrets.REPO_ID }} --branch ${{ secrets.BRANCH_NAME }}
+         databricks repos update ${{ secrets.repo }} --branch ${{ secrets.BRANCH_NAME }}
