--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,6 +24,11 @@ jobs:
           # Install latest from 'main'. To pin, replace 'main' with a tag like 'v0.265.0'.
           curl -fsSL https://raw.githubusercontent.com/databricks/setup-cli/main/install.sh | sh
           # Ensure PATH includes the CLI install location (usually ~/.l
+
+      - name: Configure Databricks CLI
+        run: |
+          export DATABRICKS_HOST=${{ secrets.DATABRICKS_URL }}
+          export DATABRICKS_TOKEN=${{ secrets.DATABRICKS_TOKEN }}
           
       - name: Update git repo
         run: |
