--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,5 +42,5 @@ jobs:
 
       - name: job creation
         run: |
-          databricks jobs create --json jobs.json
+          databricks jobs create --json @jobs.json
       
